[package]
name = "hp-cosmos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noir-protocol/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = [
	"derive"
], optional = true }
cosmrs = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
base64 = { workspace = true }

[features]
default = ["std"]
std = [
	"cosmrs",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-std/std",
	"serde_json",
]
with-codec = ["codec", "scale-info"]
with-serde = ["serde"]
