[package]
name = "hp-cosmos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noir-protocol/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = [
	"derive"
], optional = true }
cosmrs = { workspace = true, optional = true }
num_enum = { workspace = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

sp-core = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
base64ct = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cosmrs",
	"num_enum/std",
	"scale-info/std",
	"serde",
	"serde_json",
	"sp-core/std",
	"sp-std/std",
]
with-codec = ["codec", "scale-info"]
with-serde = ["serde"]
