[package]
name = "hp-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ripemd = { workspace = true }
secp256k1 = { workspace = true, optional = true }

sp-core = { workspace = true }

[features]
default = ["std"]
std = [
  "ripemd/std",
  "secp256k1/std",
  "secp256k1/global-context",
  "sp-core/std"
]
