[package]
name = "hp-io"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NoirHQ/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime-interface = { workspace = true }

hp-crypto = { workspace = true }

[features]
default = ["std"]
std = [
  "sp-runtime-interface/std",
  "hp-crypto/std",
]
