[package]
name = "hp-io"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmrs = { workspace = true, optional = true }
sp-std = { workspace = true }
sp-runtime-interface = { workspace = true }

pallet-cosmos-types = { workspace = true, features = ["with-codec"] }
hp-crypto = { workspace = true }

[features]
default = ["std"]
std = [
  "cosmrs",
  "sp-std/std",
  "sp-runtime-interface/std",
  "pallet-cosmos-types/std",
  "hp-crypto/std",
]