[package]
name = "hp-io"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, default-features = false }
hp-crypto = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime-interface/std",
	"pallet-cosmos-types/std",
	"hp-crypto/std",
]
