[package]
name = "hp-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

hp-cosmos = { workspace = true, features = ["with-codec"] }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-cosmos/std",
]
