[package]
name = "hp-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-cosmos-types = { workspace = true, features = ["with-codec", "with-serde"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-cosmos-types/std",
]
