[package]
name = "hp-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, features = [
	"with-codec",
	"with-serde",
], default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"pallet-cosmos-types/std",
	"serde/std",
]
