[package]
name = "horizon-template-node"
edition = "2021"
license = "MIT-0"
repository = "https://github.com/noirhq/horizon.git"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = 'horizon'
path = 'src/main.rs'

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }

# Substrate FRAME
frame-system-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = ["std"] }

# Substrate
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-session = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-transaction-pool = { workspace = true, features = ["std"] }
sp-wasm-interface = { workspace = true, features = ["std"] }
substrate-frame-rpc-system = { workspace = true }

# Horizon
hc-rpc = { workspace = true }
hp-account = { workspace = true, features = ["std"] }
hp-io = { workspace = true, features = ["std"] }
hp-rpc = { workspace = true, features = ["std"] }
horizon-template-runtime = { workspace = true, features = ["std"] }
pallet-cosmos-types = { workspace = true, features = ["std", "with-codec"] }
pallet-cosmos-x-bank-types = { workspace = true, features = ["std", "with-codec"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true }
