[package]
name = "horizon-template-runtime"
edition = "2021"
license = "MIT-0"
repository = "https://github.com/noirhq/horizon.git"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bech32 = { workspace = true }
cosmos-sdk-proto = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde_json = { workspace = true }

# Substrate
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["serde"] }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Substrate FRAME
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-timestamp = { workspace = true }

# Frontier
fp-self-contained = { workspace = true, features = ["serde"] }

# Horizon
hp-account = { workspace = true }
pallet-cosmos-types = { workspace = true, features = ["with-codec"] }
hp-crypto = { workspace = true }
hp-io = { workspace = true }
hp-rpc = { workspace = true }
pallet-cosmos = { workspace = true }
pallet-cosmos-accounts = { workspace = true }
pallet-cosmos-x-auth = { workspace = true }
pallet-cosmos-x-auth-migrations = { workspace = true }
pallet-cosmos-x-auth-signing = { workspace = true }
pallet-cosmos-x-bank = { workspace = true }
pallet-cosmos-x-bank-types = { workspace = true }

[dev-dependencies]
base64ct = { workspace = true, features = ["alloc"] }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"bech32/std",
	"cosmos-sdk-proto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"fp-self-contained/std",
	"hp-account/std",
	"hp-crypto/std",
	"hp-io/std",
	"hp-rpc/std",
	"pallet-cosmos/std",
	"pallet-cosmos-accounts/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x-auth/std",
	"pallet-cosmos-x-auth-migrations/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-x-bank/std",
	"pallet-cosmos-x-bank-types/std",
	"substrate-wasm-builder",
]
