[package]
name = "horizon-template-runtime"
edition = "2021"
license = "MIT-0"
repository = "https://github.com/noirhq/horizon.git"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bech32 = { workspace = true, default-features = false }
cosmos-sdk-proto = { workspace = true, default-features = false, features = [
	"cosmwasm",
] }
parity-scale-codec = { workspace = true, default-features = false }
ripemd = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }

# Substrate
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false, features = [
	"serde",
] }
sp-core = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }

# Substrate FRAME
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-aura = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }

# Frontier
fp-self-contained = { workspace = true, default-features = false, features = [
	"serde",
] }

# Horizon
hp-account = { workspace = true, default-features = false }
hp-crypto = { workspace = true, default-features = false }
hp-io = { workspace = true, default-features = false }
pallet-cosmos = { workspace = true, default-features = false }
pallet-cosmos-accounts = { workspace = true, default-features = false }
cosmos-runtime-api = { workspace = true, default-features = false }
pallet-cosmos-types = { workspace = true, default-features = false, features = [
	"with-codec",
] }
pallet-cosmos-x-auth = { workspace = true, default-features = false }
pallet-cosmos-x-auth-migrations = { workspace = true, default-features = false }
pallet-cosmos-x-auth-signing = { workspace = true, default-features = false }
pallet-cosmos-x-bank = { workspace = true, default-features = false }
pallet-cosmos-x-bank-types = { workspace = true, default-features = false }
pallet-cosmos-x-wasm = { workspace = true, default-features = false }
pallet-cosmos-x-wasm-types = { workspace = true, default-features = false }

pallet-cosmwasm = { workspace = true, default-features = false }
cosmwasm-runtime-api = { workspace = true, default-features = false }

[dev-dependencies]
base64ct = { workspace = true }
hex = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"bech32/std",
	"cosmos-sdk-proto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-aura/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"fp-self-contained/std",
	"hp-account/std",
	"hp-crypto/std",
	"hp-io/std",
	"pallet-cosmos/std",
	"pallet-cosmos-accounts/std",
	"cosmos-runtime-api/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x-auth/std",
	"pallet-cosmos-x-auth-migrations/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-x-bank/std",
	"pallet-cosmos-x-bank-types/std",
	"pallet-cosmwasm/std",
	"cosmwasm-runtime-api/std",
	"substrate-wasm-builder",
]
