[package]
name = "pallet-cosmos-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
hex = { workspace = true, features = ["std"] }

# Substrate
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

# Horizon
pallet-cosmos-runtime-api = { workspace = true, features = ["std"] }
