[package]
name = "cosmos-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-runtime-api = { workspace = true, features = ["std"] }
futures = { workspace = true }
hex = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }