[package]
name = "pallet-cosmos-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }

bech32 = { workspace = true, default-features = false, features = ["alloc"] }
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
serde = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
serde_json = { workspace = true, default-features = false, optional = true }

# Substrate
frame-support = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
array-bytes = { workspace = true }
base64ct = { workspace = true, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"bech32/std",
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-core/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
]
with-codec = ["parity-scale-codec", "scale-info"]
with-serde = ["serde"]
