[package]
name = "pallet-cosmos-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }

bech32 = { workspace = true, default-features = false, features = ["alloc"] }
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
serde = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
serde_json = { workspace = true, default-features = false, optional = true }

# Substrate
frame-support = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true }
sp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"bech32/std",
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-runtime/std",
	"hex/std",
]
with-codec = ["parity-scale-codec", "scale-info"]
with-serde = ["serde"]
