[package]
name = "pallet-cosmos-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bech32 = { workspace = true, default-features = false, features = ["alloc"] }
cosmos-sdk-proto = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"bech32/std",
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-runtime/std",
	"hex/std",
]
