[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "cosmwasm-rpc"
rust-version = "1.56"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { workspace = true }

# substrate primitives
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# local
cosmwasm-runtime-api = { workspace = true }

# SCALE
codec = { default-features = false, features = [
	"derive",
], package = "parity-scale-codec", version = "3.2.0" }
scale-info = { version = "2.3.0", default-features = false, features = [
	"derive",
] }

# rpc
jsonrpsee = { version = "0.22.5", features = ["server", "macros"] }
