[package]
name = "pallet-cosmos-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-system = { workspace = true }
sp-runtime = { workspace = true }

hp-cosmos = { workspace = true }
hp-io = { workspace = true }
pallet-cosmos-decorators = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-system/std",
	"sp-runtime/std",
	"hp-cosmos/std",
	"hp-io/std",
	"pallet-cosmos-decorators/std"
]