[package]
name = "pallet-cosmos-x-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true }

frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-cosmos-types = { workspace = true }
hp-io = { workspace = true }
pallet-cosmos = { workspace = true }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"frame-system/std",
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-io/std",
	"pallet-cosmos/std",
	"pallet-cosmos-types/std",
]
