[package]
name = "pallet-cosmos-x-bank"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }

frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-cosmos-types = { workspace = true }
pallet-cosmos-x-bank-types = { workspace = true, features = ["with-codec"] }
hp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-cosmos = { workspace = true }
pallet-cosmos-x = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-io/std",
	"pallet-balances/std",
	"pallet-cosmos/std",
	"pallet-cosmos-x-bank-types/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x/std",
]
