[package]
name = "pallet-cosmos-x-bank"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true }
log = { workspace = true }

frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

hp-io = { workspace = true }
pallet-cosmos = { workspace = true }
pallet-cosmos-types = { workspace = true }
pallet-cosmos-x-bank-types = { workspace = true, features = ["with-codec"] }

pallet-assets = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-io/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-cosmos/std",
	"pallet-cosmos-x-bank-types/std",
	"pallet-cosmos-types/std",
]
