[package]
name = "pallet-cosmos-x-bank"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

hp-io = { workspace = true, default-features = false }
pallet-cosmos = { workspace = true, default-features = false }
pallet-cosmos-types = { workspace = true, default-features = false }
pallet-cosmos-x-bank-types = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"log/std",
	"frame-support/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-runtime/std",
	"hp-io/std",
	"pallet-cosmos/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x-bank-types/std",
]
