[package]
name = "pallet-cosmos-x-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false, features = [
	"cosmwasm",
] }

frame-support = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["cosmos-sdk-proto/std", "frame-support/std", "pallet-cosmos-types/std"]
