[package]
name = "pallet-cosmos-x-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bech32 = { workspace = true, default-features = false }
cosmos-sdk-proto = { workspace = true, default-features = false, features = [
	"cosmwasm",
] }
core2 = { workspace = true, default-features = false, features = ["alloc"] }
hex = { workspace = true, default-features = false }
libflate = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

hp-crypto = { workspace = true, default-features = false }
pallet-cosmos = { workspace = true, default-features = false }
pallet-cosmos-types = { workspace = true, default-features = false }
pallet-cosmos-x-wasm-types = { workspace = true, default-features = false }
pallet-cosmwasm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"bech32/std",
	"cosmos-sdk-proto/std",
	"core2/std",
	"hex/std",
	"libflate/std",
	"frame-support/std",
	"sp-runtime/std",
	"hp-crypto/std",
	"pallet-cosmos/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x-wasm-types/std",
	"pallet-cosmwasm/std",
]
