[package]
name = "pallet-cosmos-x-auth-migrations"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }

sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["cosmos-sdk-proto/std", "sp-std/std", "serde/std", "serde_json/std"]
