[package]
name = "pallet-cosmos-x-auth-signing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true }

[features]
default = ["std"]
std = ["cosmos-sdk-proto/std"]
