[package]
name = "pallet-cosmos-x-auth-signing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, default-features = false }
pallet-cosmos-x-auth-migrations = { workspace = true, default-features = false }
pallet-cosmos-x-bank-types = { workspace = true, default-features = false }
pallet-cosmos-x-wasm-types = { workspace = true, default-features = false }

[dev-dependencies]
base64ct = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }

sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"serde_json/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x-auth-migrations/std",
	"pallet-cosmos-x-bank-types/std",
	"pallet-cosmos-x-wasm-types/std",
	"base64ct/std",
	"hex/std",
	"sp-core/std",
]
