[package]
name = "pallet-cosmos-x-bank-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true }
cosmrs = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = [
	"derive",
], optional = true }
scale-info = { workspace = true, optional = true }
serde_json = { workspace = true }

sp-std = { workspace = true }

pallet-cosmos-types = { workspace = true, features = ["with-codec"] }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"cosmrs",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-cosmos-types/std",
]
with-codec = ["parity-scale-codec", "scale-info"]
