[package]
name = "pallet-cosmos-x-bank-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
], optional = true }
scale-info = { workspace = true, default-features = false, optional = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, default-features = false, features = [
	"with-codec",
] }
pallet-cosmos-x-auth-migrations = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"pallet-cosmos-types/std",
	"pallet-cosmos-x-auth-migrations/std",
]
with-codec = ["parity-scale-codec", "scale-info"]
