[package]
name = "pallet-cosmos-x-wasm-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false, features = [
	"cosmwasm",
] }
serde_json = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["cosmos-sdk-proto/std", "serde_json/std", "pallet-cosmos-types/std"]
